@@ -291,6 +291,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|License
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|MDArtifact
 import|;
 end_import
@@ -1355,6 +1373,44 @@ argument_list|(
 name|description
 argument_list|)
 expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setLicenses
+parameter_list|(
+name|License
+index|[]
+name|licenses
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|licenses
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|ivyModuleDescriptor
+operator|.
+name|addLicense
+argument_list|(
+name|licenses
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
