@@ -45,6 +45,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashMap
 import|;
 end_import
@@ -100,6 +110,24 @@ operator|.
 name|core
 operator|.
 name|IvyPatternHelper
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
+name|License
 import|;
 end_import
 
@@ -327,6 +355,38 @@ specifier|static
 specifier|final
 name|String
 name|HOMEPAGE
+init|=
+literal|"url"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|LICENSES
+init|=
+literal|"licenses"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|LICENSE
+init|=
+literal|"license"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|LICENSE_NAME
+init|=
+literal|"name"
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|LICENSE_URL
 init|=
 literal|"url"
 decl_stmt|;
@@ -901,6 +961,161 @@ name|val
 operator|.
 name|trim
 argument_list|()
+return|;
+block|}
+specifier|public
+name|License
+index|[]
+name|getLicenses
+parameter_list|()
+block|{
+name|Element
+name|licenses
+init|=
+name|getFirstChildElement
+argument_list|(
+name|projectElement
+argument_list|,
+name|LICENSES
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|licenses
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+operator|new
+name|License
+index|[
+literal|0
+index|]
+return|;
+block|}
+name|licenses
+operator|.
+name|normalize
+argument_list|()
+expr_stmt|;
+name|List
+comment|/*<License>*/
+name|lics
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+name|it
+init|=
+name|getAllChilds
+argument_list|(
+name|licenses
+argument_list|)
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Element
+name|license
+init|=
+operator|(
+name|Element
+operator|)
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|LICENSE
+operator|.
+name|equals
+argument_list|(
+name|license
+operator|.
+name|getNodeName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|String
+name|name
+init|=
+name|getFirstChildText
+argument_list|(
+name|license
+argument_list|,
+name|LICENSE_NAME
+argument_list|)
+decl_stmt|;
+name|String
+name|url
+init|=
+name|getFirstChildText
+argument_list|(
+name|license
+argument_list|,
+name|LICENSE_URL
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|name
+operator|!=
+literal|null
+operator|||
+name|url
+operator|!=
+literal|null
+condition|)
+block|{
+name|lics
+operator|.
+name|add
+argument_list|(
+operator|new
+name|License
+argument_list|(
+name|name
+argument_list|,
+name|url
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+operator|(
+name|License
+index|[]
+operator|)
+name|lics
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|License
+index|[
+name|lics
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
 return|;
 block|}
 specifier|public
