@@ -157,6 +157,24 @@ name|module
 operator|.
 name|descriptor
 operator|.
+name|License
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|core
+operator|.
+name|module
+operator|.
+name|descriptor
+operator|.
 name|ModuleDescriptor
 import|;
 end_import
@@ -4100,6 +4118,86 @@ literal|'\r'
 argument_list|,
 literal|'\n'
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testLicense
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|PomModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"spring-hibernate3-2.0.2.pom"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|License
+index|[]
+name|licenses
+init|=
+name|md
+operator|.
+name|getLicenses
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|licenses
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|licenses
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"The Apache Software License, Version 2.0"
+argument_list|,
+name|licenses
+index|[
+literal|0
+index|]
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"http://www.apache.org/licenses/LICENSE-2.0.txt"
+argument_list|,
+name|licenses
+index|[
+literal|0
+index|]
+operator|.
+name|getUrl
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
